--- a/client/index.html
+++ b/client/index.html
@@ -1,24 +1,19 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>artspark-career-connect</title>
-    <meta name="description" content="Lovable Generated Project" />
-    <meta name="author" content="Lovable" />
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>Thryve</title>
+        <meta
+            name="description"
+            content="Thryve is a web application that connects skilled individuals like, freelancers, artisans, plumbers, with clients who need their services. It has AI-enhanced discovery, smart recommendations, and project-based showcases, Thryve becomes more than a portfolio or job board – it’s a dynamic ecosystem. It bridges the gap between skilled artisans and potential employer and investores where talented individuals struggle to showcase their work in meaningful ways, and investors/employers face difficulty in identifying, validating, and collaborating with emerging talents.
 
-    <meta property="og:title" content="artspark-career-connect" />
-    <meta property="og:description" content="Lovable Generated Project" />
-    <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+"
+        />
+    </head>
 
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
-  </head>
-
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
-  </body>
+    <body>
+        <div id="root"></div>
+        <script type="module" src="/src/main.tsx"></script>
+    </body>
 </html>
