--- a/client/index.html
+++ b/client/index.html
@@ -3,13 +3,18 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Thryve</title>
+        <title>Thryve — Where Talent Meets Opportunity</title>
         <meta
             name="description"
-            content="Thryve is a web application that connects skilled individuals like, freelancers, artisans, plumbers, with clients who need their services. It has AI-enhanced discovery, smart recommendations, and project-based showcases, Thryve becomes more than a portfolio or job board – it’s a dynamic ecosystem. It bridges the gap between skilled artisans and potential employer and investores where talented individuals struggle to showcase their work in meaningful ways, and investors/employers face difficulty in identifying, validating, and collaborating with emerging talents.
-
-"
+            content="Connect Job Seekers, Artists, Investors, and Employers in one powerful ecosystem. Discover opportunities and talent that drives success."
         />
+        <link rel="preconnect" href="https://fonts.googleapis.com" />
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+        <link
+            href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&display=swap"
+            rel="stylesheet"
+        />
+        <meta name="author" content="Geeks For Code" />
     </head>
 
     <body>
